2006-10-04  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by John Sullivan.

        <rdar://problem/4654328>
        Safari Crashes in WebCore::PluginTokenizer::writeRawData If I Try to Open a SWF File With Plug-ins Turned Off
        
        * loader/PluginDocument.cpp:
        (WebCore::PluginTokenizer::writeRawData):
        Only send the data to the plug-in if plug-ins are enabled, otherwise just silently eat it.

2006-10-03  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Tim H.

        http://bugs.webkit.org/show_bug.cgi?id=11130
        Convert "undefined" to AE missing value

        * bridge/mac/WebCoreFrameBridge.mm:
        (aeDescFromJSValue): return missing value for UndefinedType.

2006-10-03  Dave Hyatt  <hyatt@apple.com>

        Scrolling work.  Eliminate convertTo/FromContainingWindow as cross-platform functions.  Add back in
        the windowToContents/contentsToWindow functions.
        
        Reviewed by anders

        * bridge/mac/FrameMac.mm:
        (WebCore::FrameMac::eventMayStartDrag):
        (WebCore::FrameMac::dragHysteresisExceeded):
        (WebCore::FrameMac::mouseDown):
        (WebCore::FrameMac::shouldDragAutoNode):
        (WebCore::FrameMac::sendContextMenuEvent):
        * bridge/mac/FrameViewMac.mm:
        (WebCore::FrameView::passMousePressEventToScrollbar):
        * bridge/mac/WebCoreFrameBridge.mm:
        (-[WebCoreFrameBridge _visiblePositionForPoint:]):
        * dom/EventTargetNode.cpp:
        (WebCore::EventTargetNode::dispatchMouseEvent):
        (WebCore::EventTargetNode::dispatchWheelEvent):
        * page/Frame.cpp:
        (WebCore::Frame::selectClosestWordFromMouseEvent):
        (WebCore::Frame::handleMousePressEventTripleClick):
        (WebCore::Frame::handleMousePressEventSingleClick):
        (WebCore::Frame::handleMouseMoveEvent):
        (WebCore::Frame::handleMouseReleaseEvent):
        * page/FrameView.cpp:
        (WebCore::FrameView::handleMousePressEvent):